fix: contrast for bold text and show updatedDate in bloglist page

--- a/apps/frontend/styles/global.css
+++ b/apps/frontend/styles/global.css
@@ -204,7 +204,7 @@
     font-variation-settings: 'CASL' 1;
   }
   strong {
-    color: var(--primary-dark);
+    color: var(--primary-darkest);
   }
   p,
   h1,
